valid sale house 1

--- a/src/main/resources/cc/coopersoft/house/participant/Messages.properties
+++ b/src/main/resources/cc/coopersoft/house/participant/Messages.properties
@@ -10,3 +10,12 @@ primary_key_conflict=\u7F16\u53F7\u51B2\u7A81,\u6B64\u7F16\u53F7\u5DF2\u7ECF\u5B
 
 
 
+com.dgsoft.common.system.PersonEntity$CredentialsType.MASTER_ID=\u8EAB\u4EFD\u8BC1
+com.dgsoft.common.system.PersonEntity$CredentialsType.SOLDIER_CARD=\u519B\u4EBA\u8BC1
+com.dgsoft.common.system.PersonEntity$CredentialsType.PASSPORT=\u62A4\u7167
+com.dgsoft.common.system.PersonEntity$CredentialsType.COMPANY_CODE=\u8425\u4E1A\u6267\u7167
+com.dgsoft.common.system.PersonEntity$CredentialsType.OTHER=\u5176\u5B83\u8BC1\u4EF6
+com.dgsoft.common.system.PersonEntity$CredentialsType.CORP_CODE=\u673A\u6784\u4EE3\u7801\u8BC1
+com.dgsoft.common.system.PersonEntity$CredentialsType.TW_ID=\u6E2F\u6FB3\u901A\u884C\u8BC1
+
+
