--- a/src/main/resources/cc/coopersoft/house/participant/Messages.properties
+++ b/src/main/resources/cc/coopersoft/house/participant/Messages.properties
@@ -19,6 +19,15 @@ com.dgsoft.common.system.PersonEntity$CredentialsType.CORP_CODE=\u673A\u6784\u4E
 com.dgsoft.common.system.PersonEntity$CredentialsType.TW_ID=\u6E2F\u6FB3\u901A\u884C\u8BC1
 
 
+
+com.dgsoft.developersale.LogonStatus.PASSWORD_ERROR = \u7535\u5B50\u94A5\u5319\u9A8C\u8BC1\u5931\u8D25
+com.dgsoft.developersale.LogonStatus.EMP_DISABLE = \u4ECE\u4E1A\u4EBA\u5458\u5DF2\u88AB\u7981\u7528
+com.dgsoft.developersale.LogonStatus.CORP_DISABLE = \u4ECE\u4E1A\u673A\u6784\u5DF2\u88AB\u7981\u7528
+com.dgsoft.developersale.LogonStatus.CORP_OUT_TIME = \u4ECE\u4E1A\u673A\u6784\u5E74\u5BA1\u8FC7\u671F
+com.dgsoft.developersale.LogonStatus.SERVER_ERROR = \u8FDE\u63A5\u623F\u4EA7\u6548\u679C\u670D\u52A1\u5668\u51FA\u9519\u6216\u5931\u8D25\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u90E8\u95E8
+
+
+
 valid_house_not_fount=\u623F\u5C4B\u9A8C\u8BC1\u5931\u8D25\uFF1A \u63D0\u4F9B\u7684\u623F\u5C4B\u6807\u8BC6\u65E0\u6CD5\u627E\u5230\u623F\u5C4B\uFF0C\u8BF7\u786E\u8BA4\u6807\u8BC6\u6B63\u786E\u6216\u5C1D\u8BD5\u4F7F\u7528\u5176\u5B83\u6807\u8BC6
 valid_house_error=\u623F\u5C4B\u9A8C\u8BC1\u51FA\u9519\uFF1A\u65E0\u6CD5\u8FDE\u63A5\u9A8C\u8BC1\u670D\u52A1\u5668\uFF0C\u8BF7\u7A0D\u540E\u518D\u8BD5\u6216\u8054\u7CFB\u7BA1\u7406\u90E8\u95E8
 valid_house_owner_fail=\u623F\u5C4B\u9A8C\u8BC1\u5931\u8D25\uFF1A\u63D0\u4F9B\u7684\u4EA7\u6743\u4FE1\u606F\u9A8C\u8BC1\u4E0D\u901A\u8FC7\uFF0C\u8BF7\u68C0\u67E5\u4EA7\u6743\u4FE1\u606F\u662F\u5426\u6B63\u786E
