--- a/src/main/resources/cc/coopersoft/house/participant/Messages.properties
+++ b/src/main/resources/cc/coopersoft/house/participant/Messages.properties
@@ -27,6 +27,13 @@ cc.coopersoft.house.LockType.OTHER_REG= [\u5176\u5B83\u9650\u5236\u767B\u8BB0]
 cc.coopersoft.house.LockType.MORTGAGE_REEG= [\u62B5\u62BC\u767B\u8BB0]
 cc.coopersoft.house.LockType.IN_BUSINESS= [\u6B63\u5728\u529E\u7406\u4E1A\u52A1]
 
+cc.coopersoft.house.SaleLimitType.OWNER_CHANGE = \u4EA7\u6743\u9A8C\u8BC1\u5931\u8D25
+cc.coopersoft.house.SaleLimitType.STATE_LIMIT = \u4E0D\u53EF\u9500\u552E\u7684\u623F\u5C4B\u72B6\u6001
+cc.coopersoft.house.SaleLimitType.REGISTER_LIMIT = \u4E0D\u53EF\u9500\u552E\u7684\u767B\u8BB0\u72B6\u6001
+cc.coopersoft.house.SaleLimitType.LOCKED_LIMIT = \u623F\u5C4B\u9884\u8B66
+cc.coopersoft.house.SaleLimitType.CHECK_FAIL = \u5BA1\u6838\u5931\u8D25
+cc.coopersoft.house.SaleLimitType.OTHER_SALE = \u5176\u5B83\u673A\u6784\u6302\u724C
+
 com.dgsoft.developersale.LogonStatus.PASSWORD_ERROR = \u7535\u5B50\u94A5\u5319\u9A8C\u8BC1\u5931\u8D25
 com.dgsoft.developersale.LogonStatus.EMP_DISABLE = \u4ECE\u4E1A\u4EBA\u5458\u5DF2\u88AB\u7981\u7528
 com.dgsoft.developersale.LogonStatus.CORP_DISABLE = \u4ECE\u4E1A\u673A\u6784\u5DF2\u88AB\u7981\u7528
@@ -38,3 +45,6 @@ com.dgsoft.developersale.LogonStatus.SERVER_ERROR = \u8FDE\u63A5\u623F\u4EA7\u65
 valid_house_not_fount=\u623F\u5C4B\u9A8C\u8BC1\u5931\u8D25\uFF1A \u63D0\u4F9B\u7684\u623F\u5C4B\u6807\u8BC6\u65E0\u6CD5\u627E\u5230\u623F\u5C4B\uFF0C\u8BF7\u786E\u8BA4\u6807\u8BC6\u6B63\u786E\u6216\u5C1D\u8BD5\u4F7F\u7528\u5176\u5B83\u6807\u8BC6
 valid_house_error=\u623F\u5C4B\u9A8C\u8BC1\u51FA\u9519\uFF1A\u65E0\u6CD5\u8FDE\u63A5\u9A8C\u8BC1\u670D\u52A1\u5668\uFF0C\u8BF7\u7A0D\u540E\u518D\u8BD5\u6216\u8054\u7CFB\u7BA1\u7406\u90E8\u95E8
 valid_house_owner_fail=\u623F\u5C4B\u9A8C\u8BC1\u5931\u8D25\uFF1A\u63D0\u4F9B\u7684\u4EA7\u6743\u4FE1\u606F\u9A8C\u8BC1\u4E0D\u901A\u8FC7\uFF0C\u8BF7\u68C0\u67E5\u4EA7\u6743\u4FE1\u606F\u662F\u5426\u6B63\u786E
+
+house_source_exists=\u623F\u6E90\u5DF2\u7ECF\u5B58\u5728\uFF0C\u4F60\u53EF\u4EE5\u52A0\u5165\u6B64\u623F\u6E90\u5171\u540C\u9500\u552E!
+house_exists_to_edit=\u623F\u6E90\u5DF2\u7ECF\u5B58\u5728\uFF0C\u8F6C\u5165\u7F16\u8F91\u754C\u9762!
