valid sale house 1

--- a/src/main/resources/cc/coopersoft/house/participant/Messages.properties
+++ b/src/main/resources/cc/coopersoft/house/participant/Messages.properties
@@ -48,3 +48,16 @@ valid_house_owner_fail=\u623F\u5C4B\u9A8C\u8BC1\u5931\u8D25\uFF1A\u63D0\u4F9B\u7
 
 house_source_exists=\u623F\u6E90\u5DF2\u7ECF\u5B58\u5728\uFF0C\u4F60\u53EF\u4EE5\u52A0\u5165\u6B64\u623F\u6E90\u5171\u540C\u9500\u552E!
 house_exists_to_edit=\u623F\u6E90\u5DF2\u7ECF\u5B58\u5728\uFF0C\u8F6C\u5165\u7F16\u8F91\u754C\u9762!
+
+
+cc.coopersoft.house.sale.data.HouseSource$HouseSourceStatus.SUBMIT=\u5408\u540C\u5DF2\u63D0\u4EA4
+cc.coopersoft.house.sale.data.HouseSource$HouseSourceStatus.PREPARE=\u623F\u6E90\u4FE1\u606F\u5F55\u5165
+cc.coopersoft.house.sale.data.HouseSource$HouseSourceStatus.CHECK=\u623F\u6E90\u5BA1\u6838\u4E2D
+cc.coopersoft.house.sale.data.HouseSource$HouseSourceStatus.CANCEL=\u5DF2\u64A4\u6D88
+cc.coopersoft.house.sale.data.HouseSource$HouseSourceStatus.SELL=\u5DF2\u552E
+cc.coopersoft.house.sale.data.HouseSource$HouseSourceStatus.SHOWING=\u623F\u6E90\u5C55\u793A\u4E2D
+cc.coopersoft.house.sale.data.HouseSource$HouseSourceStatus.CHECK_PASS=\u623F\u6E90\u5BA1\u6838\u901A\u8FC7
+cc.coopersoft.house.sale.data.HouseSource$HouseSourceStatus.CHECK_FAIL=\u623F\u6E90\u5BA1\u6838\u9A73\u56DE
+
+datetime_pattern=yyyy\u5E74MM\u6708dd\u65E5 HH:mm:ss
+
