--- a/src/main/resources/cc/coopersoft/house/participant/Messages.properties
+++ b/src/main/resources/cc/coopersoft/house/participant/Messages.properties
@@ -18,6 +18,10 @@ com.dgsoft.common.system.PersonEntity$CredentialsType.OTHER=\u5176\u5B83\u8BC1\u
 com.dgsoft.common.system.PersonEntity$CredentialsType.CORP_CODE=\u673A\u6784\u4EE3\u7801\u8BC1
 com.dgsoft.common.system.PersonEntity$CredentialsType.TW_ID=\u6E2F\u6FB3\u901A\u884C\u8BC1
 
+com.dgsoft.house.PoolType.SINGLE_OWNER=\u5355\u72EC\u6240\u6709
+com.dgsoft.house.PoolType.TOGETHER_OWNER=\u5171\u540C\u5171\u6709
+com.dgsoft.house.PoolType.SHARE_OWNER=\u6309\u4EFD\u5171\u6709
+
 
 cc.coopersoft.house.LockType.HOUSE_LOCKED= [\u623F\u5C4B\u9884\u8B66]
 cc.coopersoft.house.LockType.SYSTEM_LOCKED= [\u7CFB\u7EDF\u9884\u8B66]
