valid sale house 1

--- a/src/main/resources/cc/coopersoft/house/participant/Messages.properties
+++ b/src/main/resources/cc/coopersoft/house/participant/Messages.properties
@@ -22,6 +22,14 @@ com.dgsoft.house.PoolType.SINGLE_OWNER=\u5355\u72EC\u6240\u6709
 com.dgsoft.house.PoolType.TOGETHER_OWNER=\u5171\u540C\u5171\u6709
 com.dgsoft.house.PoolType.SHARE_OWNER=\u6309\u4EFD\u5171\u6709
 
+com.dgsoft.common.system.Sex.FEMALE=\u5973
+com.dgsoft.common.system.Sex.MALE=\u7537
+
+com.dgsoft.common.system.PowerPersonEntity$LegalType.LEGAL_OWNER=\u6CD5\u4EBA
+com.dgsoft.common.system.PowerPersonEntity$LegalType.LEGAL_MANAGER=\u8D1F\u8D23\u4EBA
+
+cc.coopersoft.house.ProxyType.ENTRUSTED=\u59D4\u6258\u4EE3\u7406\u4EBA
+cc.coopersoft.house.ProxyType.LEGAL=\u6CD5\u5B9A\u4EE3\u7406\u4EBA
 
 cc.coopersoft.house.LockType.HOUSE_LOCKED= [\u623F\u5C4B\u9884\u8B66]
 cc.coopersoft.house.LockType.SYSTEM_LOCKED= [\u7CFB\u7EDF\u9884\u8B66]
