valid sale house 1

--- a/src/main/resources/cc/coopersoft/house/participant/Messages.properties
+++ b/src/main/resources/cc/coopersoft/house/participant/Messages.properties
@@ -25,6 +25,11 @@ com.dgsoft.house.PoolType.SHARE_OWNER=\u6309\u4EFD\u5171\u6709
 com.dgsoft.common.system.Sex.FEMALE=\u5973
 com.dgsoft.common.system.Sex.MALE=\u7537
 
+com.dgsoft.house.SalePayType.ALL_PAY=\u4E00\u6B21\u6027\u4ED8\u6B3E
+com.dgsoft.house.SalePayType.PART_PAY=\u5206\u671F\u4ED8\u6B3E
+com.dgsoft.house.SalePayType.DEBIT_PAY=\u8D37\u6B3E
+com.dgsoft.house.SalePayType.OTHER_PAY=\u5176\u5B83\u4ED8\u6B3E\u65B9\u5F0F
+
 com.dgsoft.common.system.PowerPersonEntity$LegalType.LEGAL_OWNER=\u6CD5\u4EBA
 com.dgsoft.common.system.PowerPersonEntity$LegalType.LEGAL_MANAGER=\u8D1F\u8D23\u4EBA
 
