valid sale house 1

--- a/src/main/resources/cc/coopersoft/house/participant/Messages.properties
+++ b/src/main/resources/cc/coopersoft/house/participant/Messages.properties
@@ -76,5 +76,20 @@ cc.coopersoft.house.sale.data.HouseSource$HouseSourceStatus.SHOWING=\u623F\u6E90
 cc.coopersoft.house.sale.data.HouseSource$HouseSourceStatus.CHECK_PASS=\u623F\u6E90\u5BA1\u6838\u901A\u8FC7
 cc.coopersoft.house.sale.data.HouseSource$HouseSourceStatus.CHECK_FAIL=\u623F\u6E90\u5BA1\u6838\u9A73\u56DE
 
+
+cc.coopersoft.house.HousePowerCard.NEW_OWNER=\u4E0D\u52A8\u4EA7\u6743\u8BC1
+cc.coopersoft.house.HousePowerCard.OWNER_RSHIP=\u623F\u4EA7\u8BC1
+cc.coopersoft.house.HousePowerCard.POOL_RSHIP=\u5171\u6709\u6743\u8BC1
+
+cc.coopersoft.house.sale.data.HouseSaleInfo$ShowAreaType.TO_END_TIME=\u6307\u5B9A\u65E5\u671F
+cc.coopersoft.house.sale.data.HouseSaleInfo$ShowAreaType.TO_SELL=\u7B7E\u7EA6\u65E5\u671F
+
 datetime_pattern=yyyy\u5E74MM\u6708dd\u65E5 HH:mm:ss
 
+cc.coopersoft.house.UseType.DWELLING_KEY=\u4F4F\u5B85
+cc.coopersoft.house.UseType.SHOP_HOUSE_KEY=\u5546\u4E1A\u7528\u623F
+cc.coopersoft.house.UseType.STORE_HOUSE=\u4ED3\u50A8\u7528\u623F
+cc.coopersoft.house.UseType.OFFICE=\u529E\u516C\u7528\u623F
+cc.coopersoft.house.UseType.CAR_STORE=\u8F66\u5E93
+cc.coopersoft.house.UseType.INDUSTRY=\u5DE5\u4E1A\u7528\u623F
+cc.coopersoft.house.UseType.OTHER=\u5176\u5B83
