--- a/src/main/resources/cc/coopersoft/house/participant/Messages.properties
+++ b/src/main/resources/cc/coopersoft/house/participant/Messages.properties
@@ -63,9 +63,9 @@ valid_house_not_fount=\u623F\u5C4B\u9A8C\u8BC1\u5931\u8D25\uFF1A \u63D0\u4F9B\u7
 valid_house_error=\u623F\u5C4B\u9A8C\u8BC1\u51FA\u9519\uFF1A\u65E0\u6CD5\u8FDE\u63A5\u9A8C\u8BC1\u670D\u52A1\u5668\uFF0C\u8BF7\u7A0D\u540E\u518D\u8BD5\u6216\u8054\u7CFB\u7BA1\u7406\u90E8\u95E8
 valid_house_owner_fail=\u623F\u5C4B\u9A8C\u8BC1\u5931\u8D25\uFF1A\u63D0\u4F9B\u7684\u4EA7\u6743\u4FE1\u606F\u9A8C\u8BC1\u4E0D\u901A\u8FC7\uFF0C\u8BF7\u68C0\u67E5\u4EA7\u6743\u4FE1\u606F\u662F\u5426\u6B63\u786E
 
-house_source_exists=\u623F\u6E90\u5DF2\u7ECF\u5B58\u5728\uFF0C\u4F60\u53EF\u4EE5\u52A0\u5165\u6B64\u623F\u6E90\u5171\u540C\u9500\u552E!
+house_source_exists=\u623F\u6E90\u5DF2\u7ECF\u5B58\u5728\uFF0C\u5DF2\u52A0\u5165\u6B64\u623F\u6E90\u5171\u540C\u9500\u552E!
 house_exists_to_edit=\u623F\u6E90\u5DF2\u7ECF\u5B58\u5728\uFF0C\u8F6C\u5165\u7F16\u8F91\u754C\u9762!
-
+house_source_only_exists=\u623F\u6E90\u5DF2\u7ECF\u5B58\u5728\uFF0C\u5E76\u4E14\u4E3A\u72EC\u5360\u623F\u6E90\uFF0C\u4E0D\u5141\u8BB8\u52A0\u5165!
 
 cc.coopersoft.house.sale.data.HouseSource$HouseSourceStatus.SUBMIT=\u5408\u540C\u5DF2\u63D0\u4EA4
 cc.coopersoft.house.sale.data.HouseSource$HouseSourceStatus.PREPARE=\u623F\u6E90\u4FE1\u606F\u5F55\u5165
@@ -93,3 +93,6 @@ cc.coopersoft.house.UseType.OFFICE=\u529E\u516C\u7528\u623F
 cc.coopersoft.house.UseType.CAR_STORE=\u8F66\u5E93
 cc.coopersoft.house.UseType.INDUSTRY=\u5DE5\u4E1A\u7528\u623F
 cc.coopersoft.house.UseType.OTHER=\u5176\u5B83
+
+contract_commited=\u5408\u540C\u5DF2\u63D0\u4EA4\u81F3\u4EA4\u6613\u5907\u6848\u7BA1\u7406\u90E8\u95E8
+house_source_committed=\u623F\u6E90\u5DF2\u63D0\u4EA4\u81F3\u4EA4\u6613\u5907\u6848\u7BA1\u7406\u90E8\u95E8
