--- a/src/main/resources/cc/coopersoft/house/participant/Messages.properties
+++ b/src/main/resources/cc/coopersoft/house/participant/Messages.properties
@@ -11,12 +11,14 @@ api_server_fail = \u8FDE\u63A5\u623F\u4EA7\u6548\u679C\u670D\u52A1\u5668\u51FA\u
 
 
 com.dgsoft.common.system.PersonEntity$CredentialsType.MASTER_ID=\u8EAB\u4EFD\u8BC1
-com.dgsoft.common.system.PersonEntity$CredentialsType.SOLDIER_CARD=\u519B\u4EBA\u8BC1
+com.dgsoft.common.system.PersonEntity$CredentialsType.SOLDIER_CARD=\u58EB\u5175\u8BC1
 com.dgsoft.common.system.PersonEntity$CredentialsType.PASSPORT=\u62A4\u7167
 com.dgsoft.common.system.PersonEntity$CredentialsType.COMPANY_CODE=\u8425\u4E1A\u6267\u7167
 com.dgsoft.common.system.PersonEntity$CredentialsType.OTHER=\u5176\u5B83\u8BC1\u4EF6
 com.dgsoft.common.system.PersonEntity$CredentialsType.CORP_CODE=\u673A\u6784\u4EE3\u7801\u8BC1
-com.dgsoft.common.system.PersonEntity$CredentialsType.TW_ID=\u6E2F\u6FB3\u901A\u884C\u8BC1
+com.dgsoft.common.system.PersonEntity$CredentialsType.TW_ID=\u53F0\u6E7E\u901A\u884C\u8BC1
+com.dgsoft.common.system.PersonEntity$CredentialsType.OFFICER_CARD=\u519B\u5B98\u8BC1
+com.dgsoft.common.system.PersonEntity$CredentialsType.GA_ID=\u6E2F\u6FB3\u901A\u884C\u8BC1
 
 com.dgsoft.house.PoolType.SINGLE_OWNER=\u5355\u72EC\u6240\u6709
 com.dgsoft.house.PoolType.TOGETHER_OWNER=\u5171\u540C\u5171\u6709
